--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
+.idea/
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -136,4 +136,4 @@ generated_images/BatchNorm
 generated_images/grid_viz
 generated_images/InstanceNorm
 generated_images/with_weights
-
+.idea/
