--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -136,3 +136,5 @@ generated_images/BatchNorm
 generated_images/grid_viz
 generated_images/InstanceNorm
 generated_images/with_weights
+.idea/
+models/res_unet.pt
