--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,4 @@ python-multipart==0.0.5
 uvicorn==0.17.4
 https://download.pytorch.org/whl/cpu/torch-1.10.1%2Bcpu-cp38-cp38-linux_x86_64.whl
 https://download.pytorch.org/whl/cpu/torchvision-0.11.2%2Bcpu-cp38-cp38-linux_x86_64.whl
+fastai==2.5.3
