--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install -r frontend/requirements.txt
 
 FROM python:3.8-slim-buster AS build-image
 COPY --from=compile-image /opt/venv /opt/venv
