--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,8 @@ RUN python -m venv /opt/venv
 # Make sure we use the virtualenv:
 ENV PATH="/opt/venv/bin:$PATH"
 
-COPY requirements.txt .
-RUN pip install -r frontend/requirements.txt
+COPY frontend/requirements.txt .
+RUN pip install -r requirements.txt
 
 FROM python:3.8-slim-buster AS build-image
 COPY --from=compile-image /opt/venv /opt/venv
